Rename to -ucx and add license

--- a/pkgconfig/Makefile.am
+++ b/pkgconfig/Makefile.am
@@ -1,2 +1,4 @@
+# For license: see LICENSE file at top-level
+
 pkg_cfgdir         = $(libdir)/pkgconfig
-pkg_cfg_DATA       = osss-openshmem.pc
+pkg_cfg_DATA       = osss-ucx.pc
