Trivial contexts implementation
Needs to be fleshed out as index into array of context state

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,6 +24,7 @@ MY_SOURCES             = \
                                 broadcast.c \
                                 cache.c \
                                 collect.c \
+				contexts.c \
                                 dlmalloc.c \
                                 fcollect.c \
                                 get.c \
