A rough and ready globalexit.  Probably better way to do it with UCX calls (listen, wait, event poll?)

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -5,7 +5,7 @@ PMIX_CFLAGS               = @PMIX_CFLAGS@
 OTHER_CPPFLAGS            = -I$(srcdir)/../shmemu \
 				-I../../include -I$(srcdir)/..
 LIBSHMEMC_SOURCES         = \
-				progress.c \
+				globalexit.c \
 				state.c \
 				pmix-client.c \
 				ucx-init.c \
