--- a/src/shmemu/Makefile.am
+++ b/src/shmemu/Makefile.am
@@ -1,8 +1,10 @@
 # For license: see LICENSE file at top-level
 
-OTHER_CPPFLAGS            = -I../../include -I$(srcdir)/../shmemc
+OTHER_CPPFLAGS            = -I../../include \
+				-I$(srcdir)/../shmemc \
+				-I$(srcdir)/uthash
 LIBSHMEMU_SOURCES         = hostname.c logger.c timer.c unitparse.c \
-				shmemu-init.c miscops.c
+				shmemu-init.c miscops.c deprecate.c
 
 lib_LIBRARIES             = libshmemu.a
 libshmemu_a_SOURCES       = $(LIBSHMEMU_SOURCES)
