--- a/configure.ac
+++ b/configure.ac
@@ -93,9 +93,9 @@ AM_CONDITIONAL([ENABLE_FORTRAN], [test "x$enable_fortran" = "xyes"])
 #
 AC_ARG_ENABLE([cxx],
 	AS_HELP_STRING([--disable-cxx],
-			[Disable C++ API support @<:@default=yes@:>@]))
+			[Disable C++ compiler support @<:@default=yes@:>@]))
 AS_IF([test "x$enable_cxx" != "xno"],
-	[AC_DEFINE([ENABLE_CXX], [1], [Enable C++ API])
+	[AC_DEFINE([ENABLE_CXX], [1], [Enable C++ compiler])
 	 AC_SUBST([ENABLE_CXX], [1])],
 	[AC_SUBST([ENABLE_CXX], [0])]
 	)
