--- a/include/pshmem.h.in
+++ b/include/pshmem.h.in
@@ -424,6 +424,7 @@ extern "C"
     void *pshmemalign(size_t alignment, size_t size) _WUR;
 
     void *pshmem_malloc(size_t size) _WUR;
+    void *pshmem_calloc(size_t count, size_t size) _WUR;
     void pshmem_free(void *ptr);
     void *pshmem_realloc(void *ptr, size_t size) _WUR;
     void *pshmem_memalign(size_t alignment, size_t size) _WUR;
@@ -432,34 +433,140 @@ extern "C"
      * wait operations
      */
 
-    void pshmem_short_wait_until(volatile short *ivar, int cmp,
+    void pshmem_short_wait_until(short *ivar, int cmp,
                                  short cmp_value);
-    void pshmem_int_wait_until(volatile int *ivar, int cmp, int cmp_value);
-    void pshmem_long_wait_until(volatile long *ivar, int cmp, long cmp_value);
-    void pshmem_longlong_wait_until(volatile long long *ivar, int cmp,
+    void pshmem_int_wait_until(int *ivar, int cmp,
+                               int cmp_value);
+    void pshmem_long_wait_until(long *ivar, int cmp,
+                                long cmp_value);
+    void pshmem_longlong_wait_until(long long *ivar, int cmp,
                                     long long cmp_value);
+    void pshmem_ushort_wait_until(unsigned short *ivar, int cmp,
+                                  unsigned short cmp_value);
+    void pshmem_uint_wait_until(unsigned int *ivar, int cmp,
+                                unsigned int cmp_value);
+    void pshmem_ulong_wait_until(unsigned long *ivar, int cmp,
+                                 unsigned long cmp_value);
+    void pshmem_ulonglong_wait_until(unsigned long long *ivar, int cmp,
+                                     unsigned long long cmp_value);
+    void pshmem_int32_wait_until(int32_t *ivar, int cmp,
+                                 int32_t cmp_value);
+    void pshmem_int64_wait_until(int64_t *ivar, int cmp,
+                                 int64_t cmp_value);
+    void pshmem_uint32_wait_until(uint32_t *ivar, int cmp,
+                                  uint32_t cmp_value);
+    void pshmem_uint32_wait_until(uint32_t *ivar, int cmp,
+                                  uint32_t cmp_value);
+    void pshmem_size_wait_until(size_t *ivar, int cmp,
+                                size_t cmp_value);
+    void pshmem_ptrdiff_wait_until(ptrdiff_t *ivar, int cmp,
+                                   ptrdiff_t cmp_value);
 
-    void pshmem_short_wait(volatile short *ivar, short cmp_value);
-    void pshmem_int_wait(volatile int *ivar, int cmp_value);
-    void pshmem_long_wait(volatile long *ivar, long cmp_value);
-    void pshmem_longlong_wait(volatile long long *ivar, long long cmp_value);
+    /* deprecations */
+    void pshmem_short_wait(short *ivar, short cmp_value);
+    void pshmem_int_wait(int *ivar, int cmp_value);
+    void pshmem_long_wait(long *ivar, long cmp_value);
+    void pshmem_longlong_wait(long long *ivar, long long cmp_value);
+    void pshmem_ushort_wait(unsigned short *ivar,
+                            unsigned short cmp_value);
+    void pshmem_uint_wait(unsigned int *ivar,
+                          unsigned int cmp_value);
+    void pshmem_ulong_wait(unsigned long *ivar,
+                           unsigned long cmp_value);
+    void pshmem_ulonglong_wait(unsigned long long *ivar,
+                               unsigned long long cmp_value);
+    void pshmem_int32_wait(int32_t *ivar,
+                           int32_t cmp_value);
+    void pshmem_int64_wait(int64_t *ivar,
+                           int64_t cmp_value);
+    void pshmem_uint32_wait(uint32_t *ivar,
+                            uint32_t cmp_value);
+    void pshmem_uint32_wait(uint32_t *ivar,
+                            uint32_t cmp_value);
+    void pshmem_size_wait(size_t *ivar,
+                          size_t cmp_value);
+    void pshmem_ptrdiff_wait(ptrdiff_t *ivar,
+                             ptrdiff_t cmp_value);
 
     /*
      * atomic swaps
      */
 
-    int pshmem_int_swap(int *target, int value, int pe) _WUR;
-    long pshmem_long_swap(long *target, long value, int pe) _WUR;
-    long long pshmem_longlong_swap(long long *target, long long value,
+    float pshmem_float_atomic_swap(float *target, float value,
                                    int pe) _WUR;
-    float pshmem_float_swap(float *target, float value, int pe) _WUR;
-    double pshmem_double_swap(double *target, double value,
-                              int pe) _WUR;
-    int pshmem_int_cswap(int *target, int cond, int value, int pe) _WUR;
-    long pshmem_long_cswap(long *target, long cond, long value,
-                           int pe) _WUR;
-    long long pshmem_longlong_cswap(long long *target, long long cond,
-                                    long long value, int pe) _WUR;
+    double pshmem_double_atomic_swap(double *target, double value,
+                                     int pe) _WUR;
+    short pshmem_short_atomic_swap(short *target, short value,
+                                   int pe) _WUR;
+    int pshmem_int_atomic_swap(int *target, int value,
+                               int pe) _WUR;
+    long pshmem_long_atomic_swap(long *target, long value,
+                                 int pe) _WUR;
+    long long pshmem_longlong_atomic_swap(long long *target, long long value,
+                                          int pe) _WUR;
+    unsigned short pshmem_ushort_atomic_swap(unsigned short *target,
+                                             unsigned short value,
+                                             int pe) _WUR;
+    unsigned int pshmem_uint_atomic_swap(unsigned int *target,
+                                         unsigned int value,
+                                         int pe) _WUR;
+    unsigned long pshmem_ulong_atomic_swap(unsigned long *target,
+                                           unsigned long value,
+                                           int pe) _WUR;
+    unsigned long long pshmem_ulonglong_atomic_swap(unsigned long long *target,
+                                                    unsigned long long value,
+                                                    int pe) _WUR;
+    int32 pshmem_int32_atomic_swap(int32 *target, int32 value, int pe) _WUR;
+    int64 pshmem_int64_atomic_swap(int64 *target, int64 value, int pe) _WUR;
+    uint32 pshmem_uint32_atomic_swap(uint32 *target, uint32 value,
+                                     int pe) _WUR;
+    uint64 pshmem_uint64_atomic_swap(uint64 *target, uint64 value,
+                                     int pe) _WUR;
+    size_t pshmem_size_atomic_swap(size_t *target, size_t value,
+                                   int pe) _WUR;
+    ptrdiff_t pshmem_ptrdiff_atomic_swap(ptrdiff_t *target,
+                                         ptrdiff_t value,
+                                         int pe) _WUR;
+
+    short pshmem_short_atomic_compare_swap(short *target,
+                                           short value,
+                                           int pe) _WUR;
+    int pshmem_int_atomic_compare_swap(int *target,
+                                       int value,
+                                       int pe) _WUR;
+    long pshmem_long_atomic_compare_swap(long *target,
+                                         long value,
+                                         int pe) _WUR;
+    long long pshmem_longlong_atomic_compare_swap(long long *target,
+                                                  long long value,
+                                                  int pe) _WUR;
+    unsigned short pshmem_ushort_atomic_compare_swap(unsigned short *target,
+                                                     unsigned short value,
+                                                     int pe) _WUR;
+    unsigned int pshmem_uint_atomic_compare_swap(unsigned int *target,
+                                                 unsigned int value,
+                                                 int pe) _WUR;
+    unsigned long pshmem_ulong_atomic_compare_swap(unsigned long *target,
+                                                   unsigned long value,
+                                                   int pe) _WUR;
+    unsigned long long
+    pshmem_ulonglong_atomic_compare_swap(unsigned long long *target,
+                                         unsigned long long value,
+                                         int pe) _WUR;
+    int32 pshmem_int32_atomic_compare_swap(int32 *target, int32 value,
+                                           int pe) _WUR;
+    int64 pshmem_int64_atomic_compare_swap(int64 *target, int64 value,
+                                           int pe) _WUR;
+    uint32 pshmem_uint32_atomic_compare_swap(uint32 *target, uint32 value,
+                                             int pe) _WUR;
+    uint64 pshmem_uint64_atomic_compare_swap(uint64 *target, uint64 value,
+                                             int pe) _WUR;
+    size_t pshmem_size_atomic_compare_swap(size_t *target, size_t value,
+                                           int pe) _WUR;
+    ptrdiff_t pshmem_ptrdiff_atomic_compare_swap(ptrdiff_t *target,
+                                                 ptrdiff_t value,
+                                                 int pe) _WUR;
+
 
     /*
      * atomic fetch-{add,inc} & add,inc
@@ -730,9 +837,9 @@ extern "C"
      * locks/critical section
      */
 
-    void pshmem_set_lock(volatile long *lock);
-    void pshmem_clear_lock(volatile long *lock);
-    int  pshmem_test_lock(volatile long *lock) _WUR;
+    void pshmem_set_lock(long *lock);
+    void pshmem_clear_lock(long *lock);
+    int  pshmem_test_lock(long *lock) _WUR;
 
     /*
      * atomic fetch and set
